Finish Static pages

--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -1,7 +1,5 @@
-%head
-  %title About | Ruby on Rails Tutorial Sample App
-%body
-  %h1 About
-  %p
-    This is a sample of the about page
-      
+- provide :title, "About"
+%h1 About
+%p
+  This is a sample of the about page
+    
