--- a/app/views/staticpages/help.haml
+++ b/app/views/staticpages/help.haml
@@ -1,10 +1,6 @@
-%head
-  %title Help | Ruby on Rails Tutorial Sample App
-%body
-  %h1 Help
-
-  %p
-    Get help on the Ruby rails tutorial at the 
-
-    = link_to 'Rails Tutorial Help page', 'http://www.railstutorial.org/'
+- provide :title, "Help"
+%h1 Help
+%p
+  Get help on the Ruby rails tutorial at the 
+  = link_to 'Rails Tutorial Help page', 'http://www.railstutorial.org/'
     
