--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,5 +9,7 @@
       'data-turbolinks-track': 'reload'                   
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    = yield
-
+    = render 'layouts/header'
+    %div.container
+      = yield
+      = render 'layouts/footer'
