--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -1,5 +1,11 @@
-%h1 Sample App
-%p
-  This is the home app for the
-  = link_to 'ruby', 'http://www.railstutorial.org/'
-    
+%div.center.jumbotron
+  %h1 Sample App
+  %h2
+    This is the home app for the
+    = link_to 'ruby', 'http://www.railstutorial.org/'
+  
+  = link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" 
+
+= link_to image_tag("rails.png", alt: "Rails logo"),
+  'http://rubyonrails.org/' 
+
