--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -4,7 +4,7 @@
     This is the home app for the
     = link_to 'ruby', 'http://www.railstutorial.org/'
   
-  = link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" 
+  = link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" 
 
 = link_to image_tag("rails.png", alt: "Rails logo"),
   'http://rubyonrails.org/' 
